tests/baselines/reference/parserErrorRecovery_ObjectLiteral3.errors.txt
==== tests/cases/compiler/parserErrorRecovery_ObjectLiteral3.ts (1 errors) ====
    var v = { a: 
    return;
    ~~~~~~
!!! parserErrorRecovery_ObjectLiteral3.ts(2,1): error TS1109: Expression expected.